--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: zdh
  * @Date: 2023-07-02 22:09:06
- * @LastEditTime: 2023-07-03 16:01:53
+ * @LastEditTime: 2023-07-04 17:58:22
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app">hello{{ msg }}</div>
+    <div id="app" style="color: red;font-size: 14px;">hello{{ msg }} <h>-:{{test}}</h></div>
     <script src="dist/vue.js"></script>
     <script>
         let vm = new Vue({
